--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/JuliaLid/MySQL-Node.js-Aplication#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "inquirer": "^5.1.0",
     "mysql": "^2.15.0"
